Fix bugs related to the Dark mode featue

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url(Designer.png);
+    background-image: url(../src/assets/Light_mode_image.png);
     background-size: cover;
     background-repeat: no-repeat;
     color: #ffffff;
@@ -78,21 +78,6 @@ body {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* ======= Error Message ======= */
 .error {
     color: red;
@@ -135,3 +120,85 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+/* Dark Mode Styles */
+.dark-mode body {
+    background-image:url(../src/assets/Dark_mode_image.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.dark-mode .navbar {
+    background-color: #333;
+}
+
+.dark-mode .book-card {
+    background-color: #222;
+    color: #fff;
+}
+
+.dark-mode .search-input {
+    background-color: #333;
+    color: #fff;
+    border: 1px solid #555;
+}
+
+.dark-mode .search-button {
+    background-color: #555;
+}
+
+.dark-mode .search-button:hover {
+    background-color: #777;
+}
+
+.dark-mode .book-card h3 {
+    color: #ffffff;
+}
+
+/* ======= View details button ======= */
+.dark-mode .book-card a {
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    background-color: #ffffff7c;
+    font-size: 14px;
+    transition: background 0.3s;
+}
+
+.dark-mode .book-card a:hover {
+    background-color: #ffffff;
+}
+
+
+
+
+/* ======= Book Details Page ======= */
+.dark-mode .book-details {
+    border: rgb(7, 7, 107) solid 5px;
+    width: 1000px;
+    margin: auto;
+    background: rgb(0, 0, 0);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.1);
+}
+.dark-mode .book-details .description {
+    color:#ffffff;
+    font-size: 22px;
+}
+.dark-mode .book-details h1 {
+    color: rgb(255, 255, 255);
+    font-size: 3rem;
+    margin-bottom: 10px;
+}
+
+.dark-mode .book-details .first_publish_date {
+    color: #ffffffc4;
+    font-weight: bold;
+}
